OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.8.1 (20??-??-??)
------------------
Bugs:
- HS: Vat range calculation of discounts used incorrect precisions.

5.8.0 (2019-10-28)
------------------
Features:
- ALL: Support for API v4.3.0 (https://www.siel.nl/acumulus/API/Changelog/):
  Store conceptid if invoice has been created as concept.

Bugs:
- WC: If the setting "Rond belastingen af bij subtotalen, in plaats van per
  regel" was not enabled and if the setting "Prijzen ingevoerd met belastingen"
  was set to "Ja, ik wil prijzen inclusief belasting invoeren", the plugin
  would recalculate the unit price ex vat incorrectly.
- WC3: WC3 changed what actions are fired during order create/update. As a
  result this plugin missed checking the status on order creation.
- WC: An invoice that gets saved in Acumulus will return '0000-00-00 00:00:00'
  for the field 'deleted',leading to an error in recognising if an entry has
  been deleted or not.
- WC: Use billing address if shipping address is not available and tax is based
  on shipping address.

5.7.4 (2019-08-29)
------------------
Bugs:
- MA2: Versie die getoond werd bij de support-informatie was de databaseschema-
  versie (uit module.xml), niet de moduleversie van de module (uit
  composer.json).
- MA2: Kortingen worden niet goed doorgegeven als prijzen ex btw zijn ingevoerd.
  getBaseShippingDiscountAmount() is inc of ex btw afhankelijk van of korting
  voor of na btw verrrekend wordt. MA1 heeft dit waarschijnlijk ook, maar daar
  gaat de winkel ook de fout in.
- WC: CRITICAL Uncaught ArgumentCountError: Too few arguments to function
  ...::woocommerce_attribute_label(), 2 passed and exactly 3 expected.